crates/solidity/testing/snapshots/bindings_output/imports/alias_import/generated/v2/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[main.sol:3:1]
   │
 3 │ ╭─▶ function foo() returns (int) {
   ┆ ┆   
 6 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[other.sol:1:1]
   │
 1 │ ╭─▶ function bar() pure returns (int) {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["other" @ main.sol:1:25] (import)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[main.sol:1:1]
   │
 1 │ import "./other.sol" as other;
   │                         ──┬──  
   │                           ╰──── name: 1
───╯

------------------------------------------------------------------------

Bindings: 
